Fix: no double vertical scrollbars anymore (#914).
Realized with a CSS Flexbox layout.

Does not work properly in Firefox, only in Chrome.

The Leaflet map still has issues.

Checked in separate "flexbox" branch.

See #914.

--- a/src/main/resources/web/crowd.css
+++ b/src/main/resources/web/crowd.css
@@ -10,6 +10,8 @@ html {
 body {
     font-family: "Lucida Grande", "Trebuchet MS", sans-serif;
     line-height: 1.5em;
+    display: flex;
+    flex-flow: column;
     margin: 0;
     height: 100%;
 }
@@ -27,6 +29,7 @@ strong {
 
 #header {
     display: flex;
+    flex: none;
     background-color: black;
 }
 
@@ -34,23 +37,21 @@ strong {
     flex-grow: 1;
 }
 
+#content {
+    display: flex;
+    flex: auto;
+}
+
 #map {
-    height: 100%;
+    flex: 1 0 50%;
 }
 
 #details {
-    height: 100%;
+    flex: 1 0 50%;
     overflow: auto;
     padding: 1em;
     box-sizing: border-box;
     background-color: white;
-}
-
-@media (orientation: landscape) {
-    #map {
-        width: 50%;
-        float: left;
-    }
 }
 
 /* Details */
@@ -247,7 +248,7 @@ strong {
 #powered-by {
     position: absolute;
     right: 6px;
-    bottom: -10px;
+    bottom: 6px;
     transform: translateX(100%) rotate(-90deg);
     transform-origin: left;
     font-size: 10px;
